--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ permalink: ':title/'
 baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
+remote-theme: artemsheludko/flexible-jekyll
 
 # Author Settings
 author: Táo Đỏ # add your name
