--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,21 @@
-title: Hello, world! I'm David Freeman
+title: I'm Táo Đỏ
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
-remote-theme: artemsheludko/flexible-jekyll
 
 # Author Settings
 author: Táo Đỏ # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author-img: tao_do_1.jpg # add your photo
+about-author: I am a sleepy pig
 social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
+social-facebook: "https://www.facebook.com/profile.php?id=61550288743410" # add your Facebook handle
+social-linkedin: "https://www.linkedin.com/in/maingocnghiemthi/" # add your Linkedin handle
+social-email: "nguyenmaidan2512@gmail.com" # add your Email address
 
 # Tracker
 analytics: # Google Analytics
